infra/k8s/expiration-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration
  template:
    metadata:
      labels:
        app: expiration
    spec:
      containers:
      - name: expiration
        image: ajosemalik/gettix-expiration
        # image: us.gcr.io/gettix-dev-362722/expiration
        resources:
          limits:
            memory: "600Mi"
            cpu: "600m"
