infra/k8s/orders-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
      - name: orders
        image: ajosemalik/gettix-orders
        # image: us.gcr.io/gettix-dev-362722/orders
        resources:
          limits:
            memory: "600Mi"
            cpu: "600m"
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  selector:
    app: orders
  ports:
  - name: orders
    protocol: TCP
    port: 3000
    targetPort: 3000
