infra/k8s/payments-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
      - name: payments
        image: ajosemalik/gettix-payments
        # image: us.gcr.io/gettix-dev-362722/payments
        resources:
          limits:
            memory: "600Mi"
            cpu: "600m"
---
apiVersion: v1
kind: Service
metadata:
  name: payments-service
spec:
  selector:
    app: payments
  ports:
  - name: payments
    protocol: TCP
    port: 3000
    targetPort: 3000
