infra/k8s/tickets-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
      - name: tickets
        image: ajosemalik/gettix-tickets
        # image: us.gcr.io/gettix-dev-362722/tickets
        resources:
          limits:
            memory: "512Mi"
            cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-service
spec:
  selector:
    app: tickets
  ports:
  - name: tickets
    protocol: TCP
    port: 3000
    targetPort: 3000
